--- a/index.html
+++ b/index.html
@@ -2,14 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="img/icon.png" type="image/png" sizes="16x16">
 	<script src="https://kit.fontawesome.com/160820775c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<title> lisson 8 davaleba </title>
 </head>
 <body>
+
+	<section>
+		<div class="big-box">
+			<div class="box">
+				<div class="mini-box"> </div>
+				<div class="mini-box"> </div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="big-box1">
+			<div class="box1">
+				<div class="mini-box1"> </div>
+				<div class="mini-box1"> </div>
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
